adds title of Tetris and centers elements on the page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Tetris With Video</title>
 </head>
 <body>
-    
+    <h1 id="title">Tetris</h1>
     <h3>Score: <span id="score"></span></h3>
     <button id="start-button">Start/Pause</button>
     
