changes mini-grid style, adds squares, and changes positioning of display tetrominoes so they are mostly centered

--- a/index.html
+++ b/index.html
@@ -243,6 +243,11 @@
             <div></div>
             <div></div>
             <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
         </div>
     </div>
 </body>
