--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 id="title">Tetris</h1>
     <h3>Score: <span id="score"></span></h3>
     <button id="start-button">Start/Pause</button>
+    <button id="restart-button">Restart</button>
     
     <div id="container">
         <div class="grid">
