--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1 id="title">Tetris</h1>
+    <h3>Level: <span id="level">1</span></h3>
     <h3>Score: <span id="score"></span></h3>
     <button id="start-button">Start/Pause</button>
     <button id="restart-button">Restart</button>
