makes the start button message switch between start and pause depending on its function

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <h2 id="game-over">Game Over :(</h2>
             <h3>Level: <span id="level">1</span></h3>
             <h3>Score: <span id="score"></span></h3>
-            <button id="start-button">Start/Pause</button>
+            <button id="start-button"><span id="start-button-message"></span></button>
             <button id="restart-button">Restart</button>
             <div id="controls">
                 <h4 id="controls-title">Controls</h4>
