--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
                     <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_right.png" alt="right arrow keyboard key">Move Right</p>
                     <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_down.png" alt="down arrow keyboard key">Soft Drop</p>
                     <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_up.png" alt="up arrow keyboard key">Rotate</p>
-                    <p><img class="icon" id="spacebar" src="https://vectorified.com/images/space-bar-icon-26.png" alt="spacebar keyboard key">Hard Drop</p>
+                    <p><img class="icon needs-border" src="https://vectorified.com/images/space-bar-icon-26.png" alt="spacebar keyboard key">Hard Drop</p>
+                    <p><img class="icon needs-border" src="https://arikara.org/software-downloads/user-guide-images/shift-key.png" alt="shift keyboard key">Use Up Next</p>
+
             </div>
         </div>
 
