adds additional styling for media with max width of 600px (and centers the background image)

--- a/index.html
+++ b/index.html
@@ -13,10 +13,16 @@
     <div id="container">
         <div class="info-box">
             <h2 id="game-over">Game Over :(</h2>
-            <h3>Level: <span id="level">1</span></h3>
-            <h3>Score: <span id="score"></span></h3>
-            <button id="start-button"><span id="start-button-message"></span></button>
-            <button id="restart-button">Restart</button>
+            <div id="top">
+                <div id="scoreboard">
+                    <h3>Level: <span id="level">1</span></h3>
+                    <h3>Score: <span id="score"></span></h3>
+                </div>
+                <div id="buttons">
+                    <button id="start-button"><span id="start-button-message"></span></button>
+                    <button id="restart-button">Restart</button>
+                </div>
+            </div>
             <div id="controls">
                 <h4 id="controls-title">Controls</h4>
                     <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_left.png" alt="left arrow keyboard key">Move Left</p>
@@ -25,7 +31,6 @@
                     <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_up.png" alt="up arrow keyboard key">Rotate</p>
                     <p><img class="icon needs-border" src="https://vectorified.com/images/space-bar-icon-26.png" alt="spacebar keyboard key">Hard Drop</p>
                     <p><img class="icon needs-border" src="https://arikara.org/software-downloads/user-guide-images/shift-key.png" alt="shift keyboard key">Use Up Next</p>
-
             </div>
         </div>
 
@@ -268,6 +273,15 @@
                 <div></div>
             </div>
         </div>
+    </div>
+
+    <div id="alt-controls">
+        <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_left.png" alt="left arrow keyboard key">Move Left</p>
+        <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_right.png" alt="right arrow keyboard key">Move Right</p>
+        <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_down.png" alt="down arrow keyboard key">Soft Drop</p>
+        <p><img class="icon" src="https://www.iconexperience.com/_img/v_collection_png/256x256/shadow/keyboard_key_up.png" alt="up arrow keyboard key">Rotate</p>
+        <p><img class="icon needs-border" src="https://vectorified.com/images/space-bar-icon-26.png" alt="spacebar keyboard key">Hard Drop</p>
+        <p><img class="icon needs-border" src="https://arikara.org/software-downloads/user-guide-images/shift-key.png" alt="shift keyboard key">Use Up Next</p>
     </div>
 </body>
 </html>
